src/objects/Campaign_Target__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Targets</relationshipLabel>
        <relationshipName>Campaign_Target</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Targeted_Account__c</fullName>
        <label>Targeted Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Target of Campaigns</relationshipLabel>
        <relationshipName>Campaign_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Targeted_Contact__c</fullName>
        <label>Targeted Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Target of Campaigns</relationshipLabel>
        <relationshipName>Campaign_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Target</label>
    <nameField>
        <displayFormat>Target-{00000}</displayFormat>
        <label>Campaign Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Targets</pluralLabel>
    <recordTypes>
        <fullName>AccountTarget</fullName>
        <active>true</active>
        <description>When the target of the Campaign is an organization, rather than a specific person</description>
        <label>Account Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>ContactTarget</fullName>
        <active>true</active>
        <description>When the target of the Campaign is a specific person</description>
        <label>Contact Target</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>